# font-viewer

./: .gitignore  LICENSE  README.md  UPDATE_LOG.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: README.md  reset-version.mjs  updatelog.mjs  version-release.mjs
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tauri.conf.json
src/components/: AppActions.vue  BatchOperationBar.vue  BatchSelectableFontList.vue  ChangelogModal.vue  FavoriteList.vue  FontList.vue  FontPreview.vue  LoadingSpinner.vue  SearchBar.vue  SettingsSidebar.vue  ThemeToggle.vue  UpdateNotification.vue
src/composables/: useFontManagement.js  useLayoutManagement.js  useSearchManagement.js  useTabManagement.js  useVirtualScroll.js
src/constants/: README.md  github.js  index.js  version.js
src/styles/: variables.css
src/utils/: cssVariables.js  storage.js  updateUtils.js
src/views/: ChangelogView.vue  SystemFonts.vue  SystemFontsView.vue  UpdateView.vue
